light v dark mode color fixing

--- a/src/ContactFooter/ContactFooter.module.css
+++ b/src/ContactFooter/ContactFooter.module.css
@@ -1,12 +1,16 @@
 footer {
     width: 100%;
     margin-top: 1rem;
-
     display: grid;
     grid-template-columns: .25fr 1fr 1fr 1fr .25fr;
     grid-template-areas: 
         ". socials . contact ."
         "footerBase footerBase footerBase footerBase footerBase";
+}
+
+footer a, a:hover, a:visited, a:active {
+    color: inherit;
+    text-decoration: none;
 }
 
 footer.light_mode {
@@ -40,5 +44,5 @@ footer.dark_mode {
 .footer_base {
     grid-area: footerBase;
     text-align: center;
-    margin-bottom: 1rem;
+    margin: 1rem 0;
 }
